2012-01-12  Seth Goldberg <seth.goldberg@oracle.com>

	* grub-core/lib/arg.c (grub_arg_parse): Fix NULL pointer dereference.

2012-01-12  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix handling of wide characters in gfxterm.

	* grub-core/term/gfxterm.c (grub_colored_char): Remove width and index.
	(clear_char): Likewise.
	(paint_char): Skip code == NULL chars.
	(grub_gfxterm_putchar): Set code = NULL on "shadowed" positions.

2012-01-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/charset.c: Move comment to right place.

2012-01-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/affs.c (grub_affs_bblock): Revert flags.
	(GRUB_AFFS_FLAG_FFS): Put back where it was.
	(grub_affs_mount): Revert the correct version checking.

2012-01-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.texi (Unicode): Mention several other unsupported features.

2011-12-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/squash4.c (squash_mount): Mark endian conversion in
	case statements as compile-time one.
	(direct_read): Prevent spurious warnings.
	(grub_squash_read_data): Likewise.

2011-12-26  Vladimir Serbinenko  <phcoder@gmail.com>

	Various squash4 fixes and LZO and XZ support.

	* Makefile.util.def (libgrubmods.a): Add xzembed directory to cppflags.
	Add xzembed source files.
	* grub-core/Makefile.core.def (squash4): Add xzembed and minilzo flags.
	* grub-core/fs/squash4.c (grub_squash_super): New field compression.
	(grub_squash_inode): New subtype long_dir.
	(SQUASH_TYPE_LONG_DIR): New inode type.
	(COMPRESSION): New enum.
	(XZBUFSIZ): New const.
	(grub_squash_data): New fields blksz, decompress, xzdec, xzbuf.
	(read_chunk): Use data->decompress.
	(zlib_decompress): New function.
	(lzo_decompress): Likewise.
	(xz_decompress): Likewise.
	(squash_mount): Set new data fields.
	(grub_squash_iterate_dir): Handle long dir.
	(squash_unmount): Free xzdec and xzbuf.
	(grub_squash_open): Check ino type.