@@ -583,7 +583,10 @@ static grub_err_t
 grub_cmd_initrd (grub_command_t cmd __attribute__ ((unused)),
 		 int argc, char *argv[])
 {
-  grub_file_t file = 0;
+  grub_file_t *files = 0;
+  int i;
+  int nfiles = 0;
+  grub_uint8_t *ptr;
 
   if (argc == 0)
     {
@@ -597,11 +600,23 @@ grub_cmd_initrd (grub_command_t cmd __attribute__ ((unused)),
       goto fail;
     }
 
-  file = grub_file_open (argv[0]);
-  if (! file)
+  files = grub_zalloc (argc * sizeof (files[0]));
+  if (!files)
     goto fail;
 
-  grub_printf ("Loading initrd: %s\n",argv[0]);
+  initrd_size = 0;
+  grub_printf ("Loading initrd: ");
+  for (i = 0; i < argc; i++)
+    {
+      grub_file_filter_disable_compression ();
+      files[i] = grub_file_open (argv[i]);
+      if (! files[i])
+	goto fail;
+      nfiles++;
+      initrd_size += grub_file_size (files[i]);
+      grub_printf ("%c%s\n", i == 0 ? ' ' : '+', argv[i]);
+    }
+  grub_printf ("\n");
 
   initrd_size = grub_file_size (file);
   initrd_pages = (page_align (initrd_size) >> 12);
@@ -612,17 +627,23 @@ grub_cmd_initrd (grub_command_t cmd __attribute__ ((unused)),
   grub_printf ("  [addr=0x%lx, size=0x%lx]\n",
 	       (grub_uint64_t)initrd_mem, initrd_size);
 
-  if (grub_file_read (file, initrd_mem, initrd_size) 
-      != (grub_ssize_t) initrd_size)
+  ptr = initrd_mem;
+  for (i = 0; i < nfiles; i++)
     {
-      if (!grub_errno)
-	grub_error (GRUB_ERR_FILE_READ_ERROR, N_("premature end of file %s"),
-		    argv[0]);
-      goto fail;
+      grub_ssize_t cursize = grub_file_size (files[i]);
+      if (grub_file_read (files[i], ptr, cursize) != cursize)
+	{
+	  if (!grub_errno)
+	    grub_error (GRUB_ERR_FILE_READ_ERROR, N_("premature end of file %s"),
+			argv[i]);
+	  goto fail;
+	}
+      ptr += cursize;
     }
  fail:
-  if (file)
-    grub_file_close (file);
+  for (i = 0; i < nfiles; i++)
+    grub_file_close (files[i]);
+  grub_free (files);
   return grub_errno;
 }
 
